# python-oefdb-sdk

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .~lock.oefdb-copy.csv#  1  DEV.md  LICENSE  README.md  example-notebook.py  import.py  oefdb-copy-2.csv  oefdb-copy-3.csv  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yaml
oefdb/: __init__.py  create_uuids.py  export_for_github.py  format_csv.py  import_from_github.py  validate.py  validate_schema.py
oefdb/new/: cell_validators.py  configuration.py
oefdb/schema_validation/: cell_validators.py  column_schema.py  configuration.py  schema.py  validation_result.py
oefdb/util/: __init__.py  create_uuids.py  from_oefdb_csv.py  present_results_from_validators.py  to_oefdb_csv.py
oefdb/validators/: __init__.py  _typing.py  check_for_duplicates.py  check_for_empty_uuids.py  check_ids_for_unsupported_characters.py  check_oefdb_structure.py
oefdb/validators/schema/: cell_validator_functions.py  cell_validators.py  column_schema.py  schema.py  validation_result.py
test-project/: pyproject.toml
test-project/tests/: test_test_project.py
tests/: schema.toml  test_export_for_github.py  test_foo.py  test_formatting.py  test_from_and_to_oefdb_csv.py  test_import_from_github.py  test_oefdb.py  test_schema_fixing.py  test_schema_validation.py  test_to_oefdb_csv.py  test_validate.py  utils.py
tests/fixtures/: oefdb_df_with_a_column_missing.csv  oefdb_df_with_a_compound_key_duplicate.csv  oefdb_df_with_a_compound_key_is_duplicate.csv  oefdb_df_with_a_compound_key_not_duplicate.csv  oefdb_df_with_a_duplicate_row.csv  oefdb_df_with_a_misnamed_column.csv  oefdb_df_with_a_valid_structure.csv  oefdb_df_with_an_extra_column.csv  oefdb_df_with_invalid_characters_in_the_id_column.csv  oefdb_df_without_duplicates.csv  oefdb_df_without_invalid_characters_in_the_id_column.csv  valid_oefdb_df.csv
tests/fixtures/schemas/: valid_schema.toml
tests/schema_validation/: test_header_validation.py  test_row_validations.py
tests/validators/: test_check_for_duplicates.py  test_check_for_empty_uuids.py  test_check_ids_for_unsupported_characters.py  test_check_oefdb_structure.py  test_header_validation.py
tests/validators/schema/: test_cell_validators.py  test_full_schema_validation.py  test_header_validation.py  test_row_fixing.py  test_row_validations.py  test_schema_fixing.py
