[tool.poetry]
name = "oefdb"
version = "0.0.0"
description = "Tools for interacting with and contributing to the Open Emission Factors DB (https://github.com/climatiq/Open-Emission-Factors-DB)."
license = "ISC"
authors = ["Climatiq <info@climatiq.io>"]
readme = "README.md"
homepage = "https://github.com/climatiq/python-oefdb-sdk"
repository = "https://github.com/climatiq/python-oefdb-sdk"
documentation = "https://github.com/climatiq/python-oefdb-sdk"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
]
packages = [{ include = "oefdb" }]

[tool.poetry.dependencies]
python = "^3.7.1"
PyGithub = "^1.55"
pandas = "^1.3.4"
ipywidgets = "^7.6.5"
pyperclip = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
coverage = "*"
freezegun = "*"
mypy = "*"
poethepoet = "^0.11.0"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
tox = "*"
tox-poetry = "^0.4.1"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
jupytext = "^1.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = ["pytest", "lint"]
pytest = "pytest --cov=oefdb --verbose tests/"
lint = "pre-commit run --all-files"
install_kernel = "python -m ipykernel install --user --name python-oefdb-sdk"

[tool.black]
force-exclude = 'example-notebook.py'
