[tool.poetry]
name = "oefdb"
version = "0.1.0"
description = "Tools for interacting with and contributing to the Open Emission Factors DB (https://github.com/climatiq/Open-Emission-Factors-DB)."
license = "ISC"
authors = ["Climatiq <info@climatiq.io>"]
readme = "README.md"
homepage = "https://github.com/climatiq/python-oefdb-sdk"
repository = "https://github.com/climatiq/python-oefdb-sdk"
documentation = "https://github.com/climatiq/python-oefdb-sdk"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
]
packages = [{ include = "oefdb" }]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10.0"
PyGithub = ">=1.55,<2.0"
pandas = ">=1.3.4,<2.0.0"
ipywidgets = ">=7.6.5,<8.0.0"
pyperclip = ">=1.8.2,<2.0.0"
python-dotenv = ">=0.19.2,<1.0.0"
click = ">=8.0.3,<9.0.0"
mypy = ">=0.940,<1.0.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
coverage = "*"
freezegun = "*"
poethepoet = "^0.11.0"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
tox = "*"
tox-poetry = "^0.4.1"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
jupytext = "^1.13.3"
types-click = "^7.1.8"
types-toml = "^0.10.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = ["pytest", "lint"]
pytest = "pytest"
lint = "pre-commit run --all-files"
install_kernel = "python -m ipykernel install --user --name python-oefdb-sdk"

[tool.poetry.scripts]
oefdb_validate = "oefdb.validate:cli"
oefdb_import_from_github = "oefdb.import_from_github:cli"
oefdb_export_for_github = "oefdb.export_for_github:cli"
